@@ -6,6 +6,7 @@
 * sound: #383 implemented: option to configure per-buddy sound file (Vogel)
 * gui: #2811 fixed: do not show "Move to group" menu option if moving from Everybody or Ungroupped (Vogel)
 * encryption_ng: #2952 implemented: add depreceation message (Vogel)
+* gadu: #2241 implemented: update contact's avatars on GG event (Vogel)
 
 +++ version 2.0-rc3
 * core: various crashes fixed (Vogel)
